--- a/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/Main.axml
+++ b/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/Main.axml
@@ -1,7 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
-</LinearLayout>
+    android:minWidth="25px"
+    android:minHeight="25px">
+    <EditText
+        android:layout_marginTop="200dp"
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:hint="Login"
+        android:id="@+id/login" />
+    <EditText
+        android:layout_width="90dp"
+        android:layout_height="50dp"
+        android:layout_centerHorizontal="true"
+        android:hint="Hasło"
+        android:id="@+id/hasło"
+        android:layout_below="@id/login"
+        android:layout_marginStart="20dp" />
+    <Button
+        android:text="Zaloguj"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/zaloguj"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/hasło"
+        android:onClick="sprawdz"
+        />
+</RelativeLayout>
