--- a/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/glowna.axml
+++ b/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/glowna.axml
@@ -1,117 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/DrawerLayout"
     android:layout_height="match_parent"
-    android:background="#B5B5B5">
-  
-    <RelativeLayout
-        android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:elevation="@dimen/toolbar_elevation">
+    <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:background="@drawable/kwoty"
-        android:layout_margin="10dp"
-        android:id="@+id/kwoty"
-        android:padding="5dp">
+        android:layout_height="match_parent"
+        android:background="#B5B5B5">
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar" />
         <RelativeLayout
-            android:layout_centerInParent="true"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:id="@+id/ksztalt">
+            android:layout_width="match_parent"
+            android:background="@drawable/kwoty"
+            android:layout_margin="10dp"
+            android:id="@+id/kwoty"
+            android:padding="5dp">
             <RelativeLayout
-                android:layout_height="120dp"
-                android:layout_width="120dp"
-                android:id="@+id/contener1"
-                android:background="@drawable/saldo"
-                android:layout_marginTop="10dp">
+                android:layout_centerInParent="true"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:id="@+id/ksztalt">
                 <RelativeLayout
-                    android:layout_centerInParent="true"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content">
-                    <TextView
-                        android:id="@+id/labelsaldo"
+                    android:layout_height="120dp"
+                    android:layout_width="120dp"
+                    android:id="@+id/contener1"
+                    android:background="@drawable/saldo"
+                    android:layout_marginTop="10dp">
+                    <RelativeLayout
+                        android:layout_centerInParent="true"
                         android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="@string/saldo"
-                        android:textSize="11dp"
-                        android:layout_marginBottom="1.0dp" />
-                    <TextView
-                        android:layout_below="@id/labelsaldo"
-                        android:id="@+id/saldo"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="111,11" />
+                        android:layout_width="wrap_content">
+                        <TextView
+                            android:id="@+id/labelsaldo"
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="@string/saldo"
+                            android:textSize="11dp"
+                            android:layout_marginBottom="1.0dp" />
+                        <TextView
+                            android:layout_below="@id/labelsaldo"
+                            android:id="@+id/saldo"
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="111,11" />
+                    </RelativeLayout>
                 </RelativeLayout>
-            </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/contener2"
-                android:layout_height="70dp"
-                android:layout_width="70dp"
-                android:background="@drawable/dostepne"
-                android:layout_toRightOf="@id/contener1">
                 <RelativeLayout
-                    android:layout_centerInParent="true"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content">
-                    <TextView
-                        android:id="@+id/labeldostempne"
+                    android:id="@+id/contener2"
+                    android:layout_height="70dp"
+                    android:layout_width="70dp"
+                    android:background="@drawable/dostepne"
+                    android:layout_toRightOf="@id/contener1">
+                    <RelativeLayout
+                        android:layout_centerInParent="true"
                         android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="@string/dostepne"
-                        android:textSize="11dp"
-                        android:layout_marginBottom="1.0dp" />
-                    <TextView
-                        android:layout_below="@id/labeldostempne"
-                        android:id="@+id/dostepne"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="222,22" />
+                        android:layout_width="wrap_content">
+                        <TextView
+                            android:id="@+id/labeldostempne"
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="@string/dostepne"
+                            android:textSize="11dp"
+                            android:layout_marginBottom="1.0dp" />
+                        <TextView
+                            android:layout_below="@id/labeldostempne"
+                            android:id="@+id/dostepne"
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="222,22" />
+                    </RelativeLayout>
                 </RelativeLayout>
-            </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/contener3"
-                android:layout_height="70dp"
-                android:layout_width="70dp"
-                android:layout_below="@id/contener2"
-                android:layout_toRightOf="@id/contener1"
-                android:background="@drawable/zablokowane"
-                android:layout_marginEnd="3dp">
                 <RelativeLayout
-                    android:layout_centerInParent="true"
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content">
-                    <TextView
-                        android:id="@+id/labelzablkowane"
+                    android:id="@+id/contener3"
+                    android:layout_height="70dp"
+                    android:layout_width="70dp"
+                    android:layout_below="@id/contener2"
+                    android:layout_toRightOf="@id/contener1"
+                    android:background="@drawable/zablokowane"
+                    android:layout_marginEnd="3dp">
+                    <RelativeLayout
+                        android:layout_centerInParent="true"
                         android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="@string/zablokowane"
-                        android:textSize="11dp"
-                        android:layout_marginBottom="1.0dp" />
-                    <TextView
-                        android:layout_below="@id/labelzablkowane"
-                        android:id="@+id/zablokowane"
-                        android:layout_height="wrap_content"
-                        android:layout_width="wrap_content"
-                        android:text="333,33"
-                        android:layout_centerHorizontal="true" />
+                        android:layout_width="wrap_content">
+                        <TextView
+                            android:id="@+id/labelzablkowane"
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="@string/zablokowane"
+                            android:textSize="11dp"
+                            android:layout_marginBottom="1.0dp" />
+                        <TextView
+                            android:layout_below="@id/labelzablkowane"
+                            android:id="@+id/zablokowane"
+                            android:layout_height="wrap_content"
+                            android:layout_width="wrap_content"
+                            android:text="333,33"
+                            android:layout_centerHorizontal="true" />
+                    </RelativeLayout>
                 </RelativeLayout>
             </RelativeLayout>
         </RelativeLayout>
-    </RelativeLayout>
-    <RelativeLayout
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_below="@id/kwoty"
-        android:background="@drawable/tranzakcje"
-        android:layout_margin="5dp">
-        <ListView
-            android:id="@+id/listatranzakcji"
+        <RelativeLayout
             android:layout_height="wrap_content"
-            android:layout_width="match_parent" />
-        <Button
-            android:layout_below="@id/listatranzakcji"
-            android:text="@string/wiecej"
-            android:textSize="10dp"
-            android:layout_height="40dp"
-            android:layout_width="match_parent" />
+            android:layout_width="match_parent"
+            android:layout_below="@id/kwoty"
+            android:background="@drawable/tranzakcje"
+            android:layout_margin="5dp">
+            <ListView
+                android:id="@+id/listatranzakcji"
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent" />
+            <Button
+                android:layout_below="@id/listatranzakcji"
+                android:text="@string/wiecej"
+                android:textSize="10dp"
+                android:layout_height="40dp"
+                android:layout_width="match_parent" />
+        </RelativeLayout>
     </RelativeLayout>
-</RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/RecyclerView"
+        android:layout_width="@dimen/navigation_drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="left"
+        android:background="#ffffff"
+        android:scrollbars="vertical" />
+</android.support.v4.widget.DrawerLayout>
