--- a/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/glowna.axml
+++ b/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/glowna.axml
@@ -128,6 +128,7 @@
         </RelativeLayout>
     </RelativeLayout>
     <android.support.design.widget.NavigationView
+      android:id="@+id/navigation"
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:background="@color/white"
