--- a/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/Karty.axml
+++ b/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/Karty.axml
@@ -5,19 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/toolbar_drawer">
-  <ListView
-    android:id="@+id/listViewkarty"
-     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-
-  </ListView>
-  <android.support.design.widget.NavigationView
-         android:layout_height="match_parent"
-         android:layout_width="match_parent"
-         android:background="@color/white"
-         app:itemTextColor="@color/darkgray"
-         app:menu="@menu/drawer"
-         android:layout_gravity="start" />
+    <ListView
+        android:id="@+id/listViewkarty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+    <android.support.design.widget.NavigationView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:background="@color/white"
+        app:itemTextColor="@color/darkgray"
+        app:menu="@menu/drawer"
+        android:layout_gravity="start" />
 </android.support.v4.widget.DrawerLayout>
