--- a/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/Main.axml
+++ b/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/Main.axml
@@ -4,14 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minWidth="25px"
-    android:minHeight="25px">
+    android:minHeight="25px"
+    android:background="@color/white">
     <EditText
         android:layout_marginTop="200dp"
         android:layout_width="90dp"
         android:layout_height="50dp"
         android:layout_centerHorizontal="true"
         android:hint="Login"
-        android:id="@+id/login" />
+        android:id="@+id/login"
+       
+      android:textColor="@color/black"/>
     <EditText
         android:layout_width="90dp"
         android:layout_height="50dp"
@@ -19,7 +22,9 @@
         android:hint="Hasło"
         android:id="@+id/hasło"
         android:layout_below="@id/login"
-        android:layout_marginStart="20dp" />
+        android:layout_marginStart="20dp" 
+        
+        android:textColor="@color/black"/>
     <Button
         android:text="Zaloguj"
         android:layout_width="wrap_content"
@@ -27,6 +32,5 @@
         android:id="@+id/zaloguj"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/hasło"
-        android:onClick="sprawdz"
-        />
+        android:onClick="sprawdz" />
 </RelativeLayout>
