--- a/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/Main.axml
+++ b/ApkikacjaBankowa/ApkikacjaBankowa/Resources/layout/Main.axml
@@ -13,8 +13,7 @@
         android:layout_centerHorizontal="true"
         android:hint="Login"
         android:id="@+id/login"
-       
-      android:textColor="@color/black"/>
+        android:textColor="@color/black" />
     <EditText
         android:layout_width="90dp"
         android:layout_height="50dp"
@@ -22,9 +21,9 @@
         android:hint="Hasło"
         android:id="@+id/hasło"
         android:layout_below="@id/login"
-        android:layout_marginStart="20dp" 
-        
-        android:textColor="@color/black"/>
+        android:layout_marginStart="20dp"
+        android:textColor="@color/black"
+        android:password="true" />
     <Button
         android:text="Zaloguj"
         android:layout_width="wrap_content"
